1997-08-06  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makefile (prog-subdirs): Add ftpfs.

1997-07-23  Miles Bader  <miles@gnu.ai.mit.edu>

	* usermux: New directory.
	* Makefile (prog-subdirs): Add usermux.

Mon Jul 21 16:18:50 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makeconf (linking .prof executable): Don't mutate library names
	here. 
	(making %.prof_d special target): Mutate library names here.
	(%.prof_d): Depend on Makefile in srcdir.

Fri Jul 18 16:37:22 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* isofs: New directory.
	* Makefile (prog-subdirs): Add isofs.

Thu Jul 10 14:10:32 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makeconf ($(makemode) == library): If $(no_prof) is `t', then
	don't build _p.a versions of libraries.

1997-06-19  Miles Bader  <miles@gnu.ai.mit.edu>

	* hostmux: New directory.
	* Makefile (prog-subdirs): Add hostmux.

1997-06-18  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makefile (version): Use a four-digit year.
	(dist): Always generate distributes of the form
	`hurd-${version}.tar.gz'.

Thu Jun 12 18:58:41 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Released version 0.2.

1997-06-10  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makefile (DIST_FILES): Remove SETUP.
	* SETUP: File removed.

Mon Jun  9 12:27:40 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* version.h (HURD_VERSION): Update version number to 0.2.
	* sh-version.sed: Likewise.
	* README: Likewise.
	* INSTALL: Likewise.

Thu Jun  5 14:20:56 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
	
	* Makefile: Don't include directory .d files if no_deps is t.
	(prog-subdirs): Omit ftpfs.

Fri May 23 10:06:34 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* configure.in: Use AC_PROG_CC_LOCAL instead of AC_PROG_CC.
	* aclocal.m4: New file.
	* Makefile (DIST_FILES): Add aclocal.m4.
	(Patch from Marcus G. Daniels, marcus@cathcart.sysc.pdx.edu).
	
Wed May  7 12:28:58 1997  Miles Bader  <miles@gnu.ai.mit.edu>
