@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_REVISION([$Id: configure.in,v 1.11 1997/05/23 16:39:25 thomas Exp $])
+AC_REVISION([$Id: configure.in,v 1.12 1998/04/23 00:52:19 tb Exp $])
 AC_PREREQ(2.4)			dnl Minimum Autoconf version required.
 AC_INIT(hurd/hurd_types.h)	dnl A distinctive file to look for in srcdir.
 
@@ -48,7 +48,7 @@ LIBS="$LIBCRYPT $LIBS"
 AC_CHECK_FUNCS(crypt)
 LIBS="$_SAVE_LIBS"
 
-if test $srcdir = .; then
+if test -f ./$ac_unique_file; then
   # Configuring in source directory; don't create any Makefiles.
   makefiles=
 else
